// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can parse a start task from optic yaml 1`] = `
Object {
  "isValid": true,
  "task": Object {
    "command": Object {
      "endLine": 5,
      "endPosition": 183,
      "startLine": 5,
      "startPosition": 163,
      "value": "npm run server-start",
    },
    "inboundUrl": Object {
      "endLine": 6,
      "endPosition": 221,
      "startLine": 6,
      "startPosition": 200,
      "value": "http://localhost:3005",
    },
    "name": "start",
    "targetUrl": undefined,
    "useTask": undefined,
  },
  "taskRange": Object {
    "endPosition": 221,
    "startPosition": 143,
  },
}
`;

exports[`can parse a test task from optic yaml 1`] = `
Object {
  "isValid": true,
  "task": Object {
    "command": Object {
      "endLine": 14,
      "endPosition": 375,
      "startLine": 14,
      "startPosition": 359,
      "value": "mocha test2.js",
    },
    "inboundUrl": undefined,
    "name": "test-gets",
    "targetUrl": undefined,
    "useTask": Object {
      "endLine": 15,
      "endPosition": 394,
      "startLine": 15,
      "startPosition": 389,
      "value": "start",
    },
  },
  "taskRange": Object {
    "endPosition": 394,
    "startPosition": 335,
  },
}
`;

exports[`fails gracefully when missing value 1`] = `
Object {
  "isValid": true,
  "task": Object {
    "command": undefined,
    "inboundUrl": Object {
      "endLine": 6,
      "endPosition": 198,
      "startLine": 6,
      "startPosition": 177,
      "value": "http://localhost:3005",
    },
    "name": "start",
    "targetUrl": undefined,
    "useTask": undefined,
  },
  "taskRange": Object {
    "endPosition": 198,
    "startPosition": 141,
  },
}
`;
